# maya-pipeline-inspector

./: .gitattributes  .gitignore  CHANGELOG.md  COMMUNITY.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  pyproject.toml  ruff.toml
.cursor/rules/: sequential-github-workflow.mdc
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  codeql.yml  maya-integration.yml  release.yml
docs/: ARCHITECTURE.md  CLI_TESTING.md  DEVELOPMENT_PLAN.md  MAYA_INSTALL.md  MAYA_UX_AUDIT_v0.4.md  MAYA_V02_MANUAL_CHECKLIST.md  RULE_AUTHORING.md  SNAPSHOT_SCHEMA.md  STUDIO_OVERRIDES.md  USER_GUIDE.md  V0_2_DEVELOPMENT_PLAN.md  V0_3_DEVELOPMENT_PLAN.md  V0_3_WORKFLOW.md  V0_4_RELEASE.md  V0_5_DEVELOPMENT_PLAN.md  V0_5_RELEASE.md  V0_6_DEVELOPMENT_PLAN.md  V0_6_RELEASE.md
docs/adr/: 0001-snapshot-first-core.md  0002-renderer-adapter-boundary.md  0003-safe-fix-reference-safety-policy.md  0004-headless-apply-fixes-policy.md  0005-gui-first-product-philosophy.md  0006-native-mll-plugin-strategy.md  0007-settings-and-connectors-architecture.md  0008-role-based-governance-foundation.md  0009-report-to-supervisor-routing-by-role.md  ADR_TEMPLATE.md  README.md
docs/assets/: README.md
docs/integrations/: auto_update.md  bug_report_relay.md  deadline_farm_analytics.md  deadline_submit_preflight.md  publish_submit_preflight.md  slack_notifications.md  tracker_publish.md
docs/wiki/: FAQ-and-Troubleshooting.md  Home.md  README.md  _Footer.md  _Sidebar.md
examples/arnold_policy/: README.md  arnold_policy_scene.ma  arnold_policy_scene_pipeline_inspector_deadline_command.txt
examples/broken_scene/: README.md  pipeline_inspector_demo_broken.ma  pipeline_inspector_demo_broken_fixed_deadline_farm_report.html  pipeline_inspector_demo_broken_fixed_pipeline_inspector_farm.json  pipeline_inspector_demo_broken_pipeline_inspector_farm.json  pipeline_inspector_demo_broken_pipeline_inspector_manifest.json  pipeline_inspector_demo_broken_pipeline_inspector_report.html  pipeline_inspector_demo_broken_pipeline_inspector_report.json  pipeline_inspector_reference_scene.ma  shader_health_demo_broken.ma  shader_health_demo_broken.shader_health_fix_audit.json  shader_health_demo_broken_fixed.ma  shader_health_demo_broken_fixed_shader_health_deadline_command.txt  shader_health_demo_broken_headless.ma  shader_health_demo_broken_shader_health_fix_plan.json  shader_health_demo_broken_shader_health_manifest.json  shader_health_demo_broken_shader_health_manifest_diff.html  shader_health_demo_broken_shader_health_manifest_diff.json  shader_health_demo_broken_shader_health_report.html  shader_health_demo_broken_shader_health_report.json  shader_health_reference_scene.ma
examples/deadline/: deadline_config.example.json  farm_analytics.py  shader_health_deadline_validate.py  submit_preflight.py  submit_to_farm.py
examples/publish/: submit_preflight.py
examples/textures/: demo_displacement_v001.1001.exr  demo_roughness_v001.1002.exr
examples/usd-asset/: char-usd-2-asset.usd  char-usd-asset.usd  usd-scene-2.ma  usd-scene.ma
examples/vray_policy/: README.md  vray_policy_scene.ma
maya_module/: pipeline_inspector.mod  shader_health_inspector.mod
maya_module/icons/: README.md
maya_module/plug-ins/: pipeline_inspector.py  shader_health_inspector.py
maya_module/scripts/: pipeline_inspector_bootstrap.py  shader_health_inspector_bootstrap.py  userSetup.py
maya_module/shelves/: shelf_PipelineInspector.mel  shelf_ShaderHealth.mel
native/: CMakeLists.txt  README.md
native/cmake/: FindMayaDevkit.cmake
native/src/: pipeline_inspector_plugin.cpp  shader_health_inspector_plugin.cpp
src/pipeline_inspector/: __init__.py  __main__.py  cli.py  connectors_registry.py  rules_cli.py  runtime_preferences.py  studio_config.py  trackers_registry.py  user_config.py  version.py
src/shader_health/: __init__.py  __main__.py  _agent_debug_log.py  cli.py  connectors_registry.py  debug_session_log.py  rules_cli.py  runtime_preferences.py  studio_config.py  trackers_registry.py  user_config.py  version.py
tests/: __init__.py  conftest.py
tests/fixtures/: deadline_farm_report_sample.html
tests/integration/: __init__.py  fixtures.py  test_displacement_risk_fixtures.py  test_duplicate_geometry_fixtures.py  test_duplicate_material_fixtures.py  test_optimized_texture_fixtures.py  test_pipeline_integration.py  test_renderer_policy_fixtures.py  test_renderer_rule_packs.py  test_shader_complexity_fixtures.py  test_studio_path_substitution.py  test_usd_health_fixtures.py
tests/unit/: test_advanced_settings_section.py  test_apply_fixes_cli.py  test_arnold_enrichment.py  test_arnold_policy_rules.py  test_author_maya_texture_path.py  test_author_usd_asset_path.py  test_basic_settings_section.py  test_bug_report_dialog.py  test_bug_report_payload.py  test_bug_report_relay_client.py  test_bug_report_section.py  test_bug_report_status.py  test_bug_report_throttle.py  test_cerebro_adapter.py  test_cerebro_client.py  test_cerebro_config.py  test_cerebro_connector_section.py  test_cerebro_publish.py  test_color_space_rules.py  test_complexity_profiler.py  test_connect_qt_signal.py  test_connectors_registry.py  test_deadline_analytics_history.py  test_deadline_eligibility.py  test_deadline_farm_analytics.py  test_deadline_farm_notify.py  test_deadline_integration.py  test_deadline_job_keys.py  test_deadline_submit.py  test_deadline_submit_preflight_example.py  test_debug_hygiene.py  test_discord_client.py  test_discord_connector_section.py  test_discord_embed.py  test_discord_notify.py  test_displacement_enrichment.py  test_displacement_risk_rules.py  test_documentation_actions.py  test_duplicate_geometry_rules.py  test_duplicate_material_rules.py  (+139 more)
tools/: build_maya2024_cmd.bat  build_native_plugin.ps1  build_release_assets.ps1  build_release_package.py  compare_parity.py  configure_maya_module.ps1  diff_manifests.py  launch_maya.ps1  rebrand_to_pipeline_inspector.py  recover_from_transcript.py  recover_tests_from_transcript.py  restore_pre_debug_cleanup.py  validate_rules.py
tools/ci/: maya_integration_checks.py  (+2 more)
(+451 files in other folders)
