[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maya-pipeline-inspector"
version = "0.5.0"
description = "Production-oriented material QA framework for Autodesk Maya pipelines."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Pavel Kuzmenko" }]
keywords = [
    "maya",
    "shader",
    "lookdev",
    "pipeline",
    "technical-art",
    "rendering",
    "qa",
    "vray",
    "arnold",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
    "mypy>=1.10,<2.0",
]
usd = [
    "usd-core>=24.11",
]

[project.urls]
Homepage = "https://github.com/armasonix/maya-pipeline-inspector"
Repository = "https://github.com/armasonix/maya-pipeline-inspector"
Issues = "https://github.com/armasonix/maya-pipeline-inspector/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pipeline_inspector*"]

[tool.setuptools.package-data]
pipeline_inspector = ["rules/**/*.json", "ui/themes/*.qss", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["UP045"]

[tool.mypy]
python_version = "3.9"
packages = ["pipeline_inspector"]
strict = false
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "py_cerebro.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pycerebro.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "maya.*"
ignore_missing_imports = true
